style: clipping issue in prov modal

--- a/src/styles.css
+++ b/src/styles.css
@@ -1244,6 +1244,7 @@ tr.ant-table-expanded-row .ant-descriptions-item-content .ant-descriptions > .an
 .pm-modal {
   position: relative;
   display: flex;
+  overflow: hidden;
   width: min(1120px, 100%);
   max-height: calc(100vh - 80px);
   background: #fff;
